syntax = "proto3";

package proto;
option go_package = "interface/grpc/proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

service ClientService {
    rpc GetAll(FilterClientsRequest) returns (ListClientsResponse);
    rpc Get(ClientIdRequest) returns (ClientResponse);
    rpc Create(CreateClientRequest) returns (ClientResponse);
    rpc Update(UpdateClientRequest) returns (ClientResponse);
    rpc Delete(ClientIdRequest) returns (ClientResponse);
    rpc Restore(ClientIdRequest) returns (ClientResponse);
    rpc Remove(ClientIdRequest) returns (ClientResponse);
}

service ActiveService {
    rpc GetAll(FilterActivesRequest) returns (ListActivesResponse);
    rpc Get(ActiveIdRequest) returns (ActiveResponse);
    rpc Create(CreateActiveRequest) returns (ActiveResponse);
    rpc Update(UpdateActiveRequest) returns (ActiveResponse);
    rpc Delete(ActiveIdRequest) returns (ActiveResponse);
    rpc Restore(ActiveIdRequest) returns (ActiveResponse);
    rpc Remove(ActiveIdRequest) returns (ActiveResponse);
}

service BoxService {
    rpc Parent(BoxIdRequest) returns (BoxResponse);
    rpc Ancestors(BoxIdRequest) returns (ListBoxesResponse);
    rpc Children(BoxIdRequest) returns (ListBoxesResponse);
    rpc Decedents(BoxIdRequest) returns (ListBoxesResponse);

    rpc GetAll(FilterBoxesRequest) returns (ListBoxesResponse);
    rpc Get(BoxIdRequest) returns (BoxResponse);
    rpc Create(CreateBoxRequest) returns (BoxResponse);
    rpc Update(UpdateBoxRequest) returns (BoxResponse);
    rpc Delete(BoxIdRequest) returns (BoxResponse);
    rpc Restore(BoxIdRequest) returns (BoxResponse);
    rpc Remove(BoxIdRequest) returns (BoxResponse);
}

service MoveService {
    rpc GetAll(FilterMovesRequest) returns (ListMovesResponse);
    rpc Get(MoveIdRequest) returns (MoveResponse);
    rpc Create(CreateMoveRequest) returns (MoveResponse);
}

// utils

message Error {
    string code = 1;
    string message = 2;
}

// --------------------------- clients ---------------------------

// structure

message Client {
    string id = 1;
    string name = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
    google.protobuf.Timestamp deleted_at = 5;
}

// requests

message ClientIdRequest {
    string client_id = 1;
}

message CreateClientRequest {
    string name = 1;
}

message UpdateClientRequest {
    string client_id = 1;
    string name = 2;
}

message FilterClientsRequest {
    string          name = 1;
    bool            deleted = 2;
    repeated string ids = 3;
}

// responses

message ClientResponse {
    Client client = 1;
    Error error = 2;
}

message ListClientsResponse {
    repeated Client clients = 1;
    Error error = 2;
}

// --------------------------- actives ---------------------------

// structure

message Active {
    string id = 1;
    string code = 2;
    string name = 3;
    google.protobuf.Any meta = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
    google.protobuf.Timestamp deleted_at = 7;
}

// requests

message ActiveIdRequest {
    string client_id = 1;
    string active_id = 2;
}

message CreateActiveRequest {
    string client_id = 1;
    string code = 2;
    string name = 3;
    google.protobuf.Any meta = 4;
}

message UpdateActiveRequest {
    string client_id = 1;
    string active_id = 2;
    string name = 3;
    google.protobuf.Any meta = 4;
}

message FilterActivesRequest {
    string          name = 1;
    bool            deleted = 2;
    repeated string ids = 3;
    repeated string codes = 4;
}

// responses

message ActiveResponse {
    Active active = 1;
    Error error = 2;
}

message ListActivesResponse {
    repeated Active actives = 1;
    Error error = 2;
}

// --------------------------- box ---------------------------

// structure

message Box {
    string id = 1;
    repeated string route = 2;
    string name = 3;
    google.protobuf.Any meta = 4;
    map<string, int64> actives = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
    google.protobuf.Timestamp deleted_at = 8;
}

// requests

message BoxIdRequest {
    string client_id = 1;
    string box_id = 2;
}

message CreateBoxRequest {
    string client_id = 1;
    string name = 2;
    google.protobuf.Any meta = 3;
}

message UpdateBoxRequest {
    string client_id = 1;
    string box_id = 2;
    string name = 3;
    google.protobuf.Any meta = 4;
}

message FilterBoxesRequest {
    string          name = 1;
    bool            deleted = 2;
    string          active = 3;
    string          ancestor_id = 4;
    string          parent_id = 5;
    repeated string ids = 6;
}

// responses

message BoxResponse {
    Box box = 1;
    Error error = 2;
}

message ListBoxesResponse {
    repeated Box boxes = 1;
    Error error = 2;
}

// --------------------------- move ---------------------------

// structure

message Move {
    string id = 1;
    string active = 2;
    string from_id = 3;
    string to_id = 4;
    google.protobuf.Timestamp date = 5;
    uint64 count = 6;
    google.protobuf.Any meta = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
    google.protobuf.Timestamp deleted_at = 10;
}

// requests

message MoveIdRequest {
    string client_id = 1;
    string move_id = 2;
}

message CreateMoveRequest {
    string client_id = 1;
    string active_id = 2;
    string from_id = 3;
    string to_id = 4;
    google.protobuf.Timestamp date = 5;
    uint64 count = 6;
    google.protobuf.Any meta = 7;
}

message FilterMovesRequest {
    bool            deleted = 1;
    string          active = 2;
    uint64          count_min = 3;
    uint64          count_max = 4;
    google.protobuf.Timestamp date_min = 5;
    google.protobuf.Timestamp date_max = 6;
    repeated string ids = 7;
    repeated string from_ids = 8;
    repeated string to_ids = 9;
}

// responses

message MoveResponse {
    Move move = 1;
    Error error = 2;
}

message ListMovesResponse {
    repeated Move moves = 1;
    Error error = 2;
}